# spark_flow

./: pyproject.toml
dags/: @  \  movies_dynamic_json.py  pyspark_movie.py
src/spark_flow/: re.py
tests/: test_re.py
